# libpenis

./: LICENSE  README.md  libpenis.cabal
src/: Penis.hs
test/: Main.hs
