cabal-version:      3.4
name:               libpenis
version:            0.1.0.0
synopsis:           Haskell port of libpenis library
description:        Comparing variables was never been that easy and clear like using libpenis. Now witn purely functional flavor.
license:            LicenseRef-Giant-Penis-License
license-file:       LICENSE
author:             Variable Comparing WG
maintainer:         varcomp@morke.org
copyright:          © 2024 Variable Comparing WG <varcomp@morke.org>
category:           Control
build-type:         Simple

library
    exposed-modules:  Penis
    ghc-options:      -Wall
    build-depends:    base >= 4.17 && < 4.21
    hs-source-dirs:   src
    default-language: Haskell2010

test-suite libpenis-test
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        base,
        libpenis

source-repository head
    type:     git
    location: git://github.com/zeligW/libpenis.git

source-repository this
    type:     git
    location: git://github.com/zeligW/libpenis.git
    tag:      v0.1.0.0
